--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fontsource/roboto": "^4.5.7",
+    "@fontsource/poppins": "^4.5.8",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
