--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fontsource/poppins": "^4.5.8",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
     "core-js": "^3.8.3",
     "vue": "^2.6.14"
   },
