--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fontsource/poppins": "^4.5.8",
+    "@fontsource/manjari": "^4.5.9",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
